// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar matches snapshot with balance 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-5oul0u r-paddingBottom-xd6kpl r-paddingLeft-f727ji r-paddingRight-1pyaxff r-paddingTop-tskmnb"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "5px",
        "borderBottomRightRadius": "5px",
        "borderTopLeftRadius": "5px",
        "borderTopRightRadius": "5px",
        "paddingBottom": "16px",
        "paddingLeft": "12px",
        "paddingRight": "12px",
        "paddingTop": "16px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        aria-disabled={true}
        className="css-view-1dbjc4n r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(203,203,203,1.00)",
            "borderBottomColor": "rgba(163,163,163,1.00)",
            "borderBottomLeftRadius": "21px",
            "borderBottomRightRadius": "21px",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(163,163,163,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(163,163,163,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(163,163,163,1.00)",
            "borderTopLeftRadius": "21px",
            "borderTopRightRadius": "21px",
            "borderTopWidth": "1px",
            "height": "42px",
            "width": "42px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-backgroundColor-1niwhzg"
          style={
            Object {
              "borderBottomLeftRadius": "20px",
              "borderBottomRightRadius": "20px",
              "borderTopLeftRadius": "20px",
              "borderTopRightRadius": "20px",
              "height": "40px",
              "width": "40px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "borderBottomLeftRadius": "20px",
                "borderBottomRightRadius": "20px",
                "borderTopLeftRadius": "20px",
                "borderTopRightRadius": "20px",
                "height": "40px",
                "width": "40px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"unknownProfile.svg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="unknownProfile.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "baseline",
            "WebkitBoxAlign": "baseline",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexDirection": "row",
            "alignItems": "baseline",
            "display": "flex",
            "flexDirection": "row",
            "msFlexAlign": "baseline",
            "msFlexDirection": "row",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(85,85,85,1.00)",
              "fontFamily": "Roboto Slab",
              "fontSize": "36px",
              "fontWeight": "700",
              "lineHeight": "36px",
              "marginRight": "2px",
              "textAlign": "right",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          -.--
        </div>
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(66,69,74,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "16px",
              "fontWeight": "normal",
              "lineHeight": "22px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "color": "rgba(85,85,85,1.00)",
                "fontFamily": "Roboto Slab",
                "fontSize": "18px",
                "fontWeight": "700",
                "lineHeight": "24px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            G
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "color": "rgba(85,85,85,1.00)",
                "fontFamily": "Roboto Slab",
                "fontSize": "17.5px",
                "fontWeight": "700",
                "lineHeight": "21px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            $
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar matches snapshot without balance 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-5oul0u r-paddingBottom-xd6kpl r-paddingLeft-f727ji r-paddingRight-1pyaxff r-paddingTop-tskmnb"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "5px",
        "borderBottomRightRadius": "5px",
        "borderTopLeftRadius": "5px",
        "borderTopRightRadius": "5px",
        "paddingBottom": "16px",
        "paddingLeft": "12px",
        "paddingRight": "12px",
        "paddingTop": "16px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        aria-disabled={true}
        className="css-view-1dbjc4n r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(203,203,203,1.00)",
            "borderBottomColor": "rgba(163,163,163,1.00)",
            "borderBottomLeftRadius": "21px",
            "borderBottomRightRadius": "21px",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(163,163,163,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(163,163,163,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(163,163,163,1.00)",
            "borderTopLeftRadius": "21px",
            "borderTopRightRadius": "21px",
            "borderTopWidth": "1px",
            "height": "42px",
            "width": "42px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-backgroundColor-1niwhzg"
          style={
            Object {
              "borderBottomLeftRadius": "20px",
              "borderBottomRightRadius": "20px",
              "borderTopLeftRadius": "20px",
              "borderTopRightRadius": "20px",
              "height": "40px",
              "width": "40px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "borderBottomLeftRadius": "20px",
                "borderBottomRightRadius": "20px",
                "borderTopLeftRadius": "20px",
                "borderTopRightRadius": "20px",
                "height": "40px",
                "width": "40px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"unknownProfile.svg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="unknownProfile.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar should render the children component 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-5oul0u r-paddingBottom-xd6kpl r-paddingLeft-f727ji r-paddingRight-1pyaxff r-paddingTop-tskmnb"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "5px",
        "borderBottomRightRadius": "5px",
        "borderTopLeftRadius": "5px",
        "borderTopRightRadius": "5px",
        "paddingBottom": "16px",
        "paddingLeft": "12px",
        "paddingRight": "12px",
        "paddingTop": "16px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        aria-disabled={true}
        className="css-view-1dbjc4n r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgba(203,203,203,1.00)",
            "borderBottomColor": "rgba(163,163,163,1.00)",
            "borderBottomLeftRadius": "21px",
            "borderBottomRightRadius": "21px",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(163,163,163,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(163,163,163,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(163,163,163,1.00)",
            "borderTopLeftRadius": "21px",
            "borderTopRightRadius": "21px",
            "borderTopWidth": "1px",
            "height": "42px",
            "width": "42px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-backgroundColor-1niwhzg"
          style={
            Object {
              "borderBottomLeftRadius": "20px",
              "borderBottomRightRadius": "20px",
              "borderTopLeftRadius": "20px",
              "borderTopRightRadius": "20px",
              "height": "40px",
              "width": "40px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style={
              Object {
                "borderBottomLeftRadius": "20px",
                "borderBottomRightRadius": "20px",
                "borderTopLeftRadius": "20px",
                "borderTopRightRadius": "20px",
                "height": "40px",
                "width": "40px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
              style={
                Object {
                  "backgroundImage": "url(\\"unknownProfile.svg\\")",
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="unknownProfile.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(66,69,74,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "16px",
              "fontWeight": "normal",
              "lineHeight": "22px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          Children element
        </div>
      </div>
    </div>
  </div>
</div>
`;
